# formatxx

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  format.cc  format.h  format_std.h  formatxx.vcxitems  formatxx.vcxitems.filters
.github/workflows/: main.yml
include/formatxx/: buffered.h  buffered_writer.h  fixed.h  format.h  small_buffer.h  small_string.h  std_string.h  stdfmt.h  string.h  wide.h  writers.h
include/formatxx/_detail/: append_writer.h  format_arg.h  format_arg_impl.h  format_impl.h  format_traits.h  format_util.h  parse_format.h  parse_printf.h  parse_unsigned.h  printf_impl.h  write_float.h  write_integer.h  write_string.h  write_wide.h
source/: format.cc  format_impl.inl  parse_format.inl  parse_unsigned.inl  printf_impl.inl  tests.cc  traits.inl  wide.cc  write_integer.inl
tests/: test_format.cc  test_printf.cc  test_small_buffer.cc  test_small_string.cc  test_wide.cc  test_writer.cc
